# OSDMenu

./: .clang-format  .clangd  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
.zed/: settings.json
cmake/: functions.cmake  patch_section.cmake
common/: defaults.h
common/include/: cdrom.h  cnf.h  defaults.h  dprintf.h  game_id.h  game_id_table.h  history.h  loader.h  patinfo.h  psxinit.h
common/src/: cdrom.c  cnf.c  dprintf.c  game_id.c  history.c  loader.c  patinfo.c  psxinit.c
examples/: OSDGSM.CNF  OSDMBR.CNF  OSDMENU.CNF
launcher/: CMakeLists.txt  Makefile  README.md
launcher/include/: common.h  handlers.h  init.h  loader.h
launcher/iop/udpfs/ministack/include/: ministack_dhcp.h
launcher/iop/udpfs/ministack/src/: exports.tab  ministack_dhcp.c
launcher/iop/udpfs/smap/src/: exports.tab
launcher/iop/udpfs/udpbd/src/: irx_imports.h
launcher/iop/udpfs/udpfs/src/: exports.tab
launcher/ps1vn/: README.md
launcher/src/: common.c  handler_bdm.c  handler_cdrom.c  handler_fmcb.c  handler_mc.c  handler_osdm.c  handler_patinfo.c  handler_pfs.c  handler_quickboot.c  handler_udpfs.c  init.c  loader.c  main.c
mbr/: CMakeLists.txt  Makefile  README.md  linkfile
mbr/include/: common.h  config.h  crypto.h  disc.h  handlers.h  hdd.h  init.h  loader.h  mbrboot_crypto.h
mbr/src/: common.c  config.c  crypto.c  disc.c  handlers.c  hdd.c  hdd_start.c  init.c  loader.c  main.c  mbrboot.c  mbrboot_crypto.c  patinfo.c
patcher/: CMakeLists.txt  Makefile  README.md  linkfile  linkfile.hosd
patcher/include/: decompress.h  gs.h  init.h  launcher.h  loader.h  osdr.h  patches_common.h  patches_fmcb.h  patches_osdmenu.h  patterns_browser.h  patterns_common.h  patterns_fmcb.h  patterns_gs.h  patterns_osd.h  patterns_ps1drv.h  patterns_version.h  psx.h  settings.h  splash.h
patcher/iop/atad/: Makefile
patcher/iop/atad/src/: ps2atad.c
patcher/iop/atad/src/include/: atahw_old.h
patcher/src/: decompress.c  gs.c  init.c  launcher.c  loader.c  main.c  osdr.c  patches_browser.c  patches_common.c  patches_fmcb.c  patches_gs.c  patches_osd.c  patches_ps1drv.c  patches_version.c  psx.c  settings.c  splash.c
res/psu/: title.cfg
utils/: makepsu.py
utils/egsm/: CMakeLists.txt  Makefile  README.md  linkfile
utils/egsm/include/: egsm_api.h
utils/egsm/src/: main.c
utils/icn/: icon.sys
utils/installer/: CMakeLists.txt  Makefile  README.md
utils/installer/config/: osdmbr.cnf
utils/installer/src/: init.c  main.c
utils/kelf/: sign.py  sign.sh
utils/loader/: CMakeLists.txt  Makefile  README.md  linkfile  loader.c
utils/loader/include/: ps2logo.h
utils/loader/src/: loader.c  ps2logo.c
utils/mbr/: Makefile  README.md  linkfile
utils/mbr/src/: crt0.S  crt0.c  main.c
utils/mbrboot/: Makefile  README.md  linkfile
utils/mbrboot/include/: common.h  config.h  init.h  loader.h  mbrboot.h
utils/mbrboot/src/: common.c  config.c  crt0.c  hdd.c  init.c  loader.c  main.c  mbrboot.c  mbrboot_crypto.c
utils/ps1vn/: CMakeLists.txt  linkfile
utils/ps1vn/src/: main.c
utils/res/kelfbinder/: EXTINST.lua
utils/res/kelfbinder/ASSETS/: CHN.sys  EUR.sys  JPN.sys  USA.sys
utils/res/kelfbinder/ASSETS/SYS-CONF/: icon.sys
utils/res/psu/: APPINFO.PBT  icon.sys  title.cfg
utils/scripts/: rom_to_osdr.py
